<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:orientation="vertical"
            android:paddingTop="120dp">

            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/logo_stationery"
                android:layout_marginTop="120dp"
                android:text="@string/slide_2_title"
                android:textAlignment="center"
                android:textColor="@color/dot_light_screen"
                android:textSize="@dimen/font_34sp"
                android:textStyle="normal"></TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/welcome_text"
                android:layout_marginTop="20dp"
                android:padding="16dp"
                android:text="@string/slide_2_desc"
                android:textAlignment="center"
                android:textColor="@color/dot_light_screen"
                android:textSize="@dimen/font_16sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/btn_daftar"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register" />
        </LinearLayout>
    </RelativeLayout>

</LinearLayout>